clang/test/BSC/Negative/InitAnalysis/init-loop-variants.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test: various loop initialization scenarios.

// Variable initialized before loop is definitely initialized after.
_Safe void test_init_before_loop(int n) {
    int x = 0;
    while (n > 0) {
        x = x + 1;
        n = n - 1;
    }
    int y = x; // no error: x initialized before loop
}

// Variable only initialized inside loop is possibly uninitialized after.
_Safe void test_init_inside_loop_only(int n) {
    int x;
    while (n > 0) {
        x = n;
        n = n - 1;
    }
    int y = x; // expected-error {{use of possibly uninitialized value: `x`}}
}

// Variable used inside loop body must be initialized before the loop.
_Safe void test_use_inside_loop(int n) {
    int x;
    int sum = 0;
    while (n > 0) {
        sum = sum + x; // expected-error {{use of uninitialized value: `x`}}
        n = n - 1;
    }
}
